--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
-
-MONGO_URI = 'mongodb+srv://changanikevin96:R6QogjpkgKquNU3o@cluster0.jr57q.mongodb.net/test'
+# App
 PORT = 9090
+
+# DataBase
+MONGO_URI = 'mongodb+srv://changanikevin96:R6QogjpkgKquNU3o@cluster0.jr57q.mongodb.net/test'
+
+# Redis
+REDIS_USERNAME: default
+REDIS_PASSWORD: ufCgzadekfbP1ccLDpO4qeaEQZKMhnZh
+REDIS_HOST: redis-15649.c265.us-east-1-2.ec2.redns.redis-cloud.com
+REDIS_PORT: 15649
+REDIS_URL :redis://default:ufCgzadekfbP1ccLDpO4qeaEQZKMhnZh@redis-15649.c265.us-east-1-2.ec2.redns.redis-cloud.com:15649
