--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "bull": "^4.16.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.6",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
+    "redis": "^4.7.0",
     "url": "^0.11.4"
   }
 }
