--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "redis": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "url": "^0.11.4"
   }
 }
