--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "winston": "^3.17.0"
   }
 }
