Add winston logger

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ REDIS_PASSWORD: ufCgzadekfbP1ccLDpO4qeaEQZKMhnZh
 REDIS_HOST: redis-15649.c265.us-east-1-2.ec2.redns.redis-cloud.com
 REDIS_PORT: 15649
 REDIS_URL :redis://default:ufCgzadekfbP1ccLDpO4qeaEQZKMhnZh@redis-15649.c265.us-east-1-2.ec2.redns.redis-cloud.com:15649
+
+#SMS Mobile
+SMSAPIURL=https://msg.eurasianinfotech.in/api/push
+APIKEY=5f198f4684df1
+SENDER=SHRIJi
